tests/test_cqasm_v1.0/valid/gates/ry.qasm
version 1.0
qubits 4

map q[0], q0

h q0
h q[1]

ry q[0], 3.14
ry q0, 0.0
ry q[1], -0.0
ry q[1], -1.14
ry q[2], 10.3E-3
ry q[3], -10.3E-3

display
